# theatre-layout

./: .crails  .gitignore  CMakeLists.txt  package.json  prebuild.sh  webpack.config.js
javascripts/: editor.js  sticky_header.js
src/: layout.cpp  layout.hpp  main.cpp  style.hpp
stylesheets/: _fonts.scss  _theme.scss  admin.scss
stylesheets/theatre/: _bookings.scss  _content_editor.scss  _date_block.scss  _layout.scss  _layout_components.scss  _navbar.scss  _variables.scss  admin.scss
stylesheets/theatre/components/: _picture.scss
views/layouts/themes/: theatre.html
webpackage/: index.js  slider.js
